<resources>
    <string name="app_name">Note Keep</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="drawer_note">Note</string>
    <string name="drawer_note_reminder">Note Reminder</string>
    <string name="drawer_note_back">Back Up Note</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_address_singup_hint">Email address</string>
    <string name="password_singup_hint">Password</string>
    <string name="repeat_password_signup_hint">Repeat password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="already_signed_in_login">Already signed up? Login</string>
    <string name="log_in_text">Log In</string>
    <string name="login_button">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="back_up_note_button">Back Up Note</string>
    <string name="restore_note_button">Restore Note</string>
    <string name="backup_details">By Signing Up you can keep your notes online and if your phone is lost,stolen or Note Keep is Uninstalled you can Restore them when you install Note Keep</string>
    <string name="switch_auto_back_up">Auto Back Up</string>
    <string name="add_note_hint_title">Title</string>
    <string name="add_note_hint_note">Note</string>
    <string name="edit_note_hint_title">Title</string>
    <string name="edit_note_hint_note">Note</string>
    <string name="main_no_note">No Note</string>
    <string name="add_reminder_title">Add Reminder</string>
    <string name="add_reminder_hint_select_time">Select Time</string>
    <string name="add_reminder_hint_select_date">Select Date</string>
    <string name="add_reminder_save">Save</string>
    <string name="add_reminder_cancel_reminder">Cancel Reminder</string>
    <string name="edit_reminder_title">Edit Reminder</string>
    <string name="edit_reminder_hint_select_time">Select Time</string>
    <string name="edit_reminder_hint_select_date">Select Date</string>
    <string name="edit_reminder_save_changes">Save Changes</string>
    <string name="edit_reminder_cancel_reminder">Cancel Reminder</string>
    <string name="nav_header_note_keep">Note Keep</string>
    <string name="note_image_descrip_reminder_icon">reminder icon</string>
    <string name="note_keep_logo">Note Keep Logo</string>
    <string name="edit_note_reminder_icon">edit note reminder icon</string>
    <string name="add_note_reminder_icon">add note reminder icon</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="button_send_reset_password">Send Reset Password</string>
    <string name="text_forget_password">Forget Password</string>
    <string name="password_reset_details">We just need your registered email to send you password reset instructions</string>
    <string name="backup_logout">Logout</string>
    <string name="text_sign_up_now">Haven\'t sign up before? Sign Up Now</string>
</resources>
